Fix vertical align <nav> problem

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -582,6 +582,10 @@ video {
   place-content: space-evenly;
 }
 
+.items-center {
+  align-items: center;
+}
+
 .justify-center {
   justify-content: center;
 }
